强化虚拟化线程，新增插件开发文档